# my_course_note

./: .gitignore  README.md
Introduction to Computational Thinking/: URL.txt
coursera_machine_learning/: README.md
coursera_machine_learning/machine-learning-ex1/ex1/: computeCost.m  computeCostMulti.m  ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  plotData.m
coursera_machine_learning/machine-learning-ex1/ex1/lib/: submitWithConfiguration.m
coursera_notes_self_driving_cars/2_state_estimation_and_localization_for_self_driving_cars/code/: w2_ekf.m  w2_wls.m
data-driven_science_and_engineering/: README.md
data-driven_science_and_engineering/matlab/: .gitignore
data-driven_science_and_engineering/matlab/mywork/ch01/: ch1_2.m  ch1_3.m  ch1_4_1.m  ch1_4_2.m  ch1_4_3.m  ch1_5_1.m  ch1_5_2.m  ch1_6_1.m  ch1_6_234.m  ch1_7_1.m  ch1_7_1_eigface.m  ch1_7_2_1.m  ch1_7_2_2.m  ch1_8.m  ch1_9.m  temp.mat
data-driven_science_and_engineering/matlab/mywork/ch02/: ch2_1.m
mit_linear_algebra/: README.md
mit_linear_algebra/materials/2020年新课/res-18-010-spring-2020/: imsmanifest.xml
mit_probability/: README.md
mit_probability/其他书籍/A First Course in Probability/: 习题答案.rar
src/icp_test/: CMakeLists.txt  icp.cpp  icp.h
src/icp_test/data/: key_frame_0.pcd  key_frame_4.pcd
src/lidar_localization/: CMakeLists.txt
src/lidar_localization/config/front_end/: config.yaml
src/lidar_localization/slam_data/trajectory/: ground_truth.txt
src/lidar_localization/src/front_end/: front_end.cpp
西电_信号与系统/: 西电_信号与系统_讲义.rar
计算之魂/: README.md
(+59 files in other folders)
